# ppbase

./: .gitignore  AGENTS.md  CLAUDE.md  COMPARISON_POCKETBASE_VS_PPBASE.md  POCKETBASE_RULES_ANALYSIS.md  README.md  comparison_api.md  comparison_auth.md  comparison_fields.md  comparison_gaps.md  ppctl.sh  pyproject.toml
admin-ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
admin-ui/src/: App.tsx
docs/: auth.md  getting-started.md  hooks.md  index.md  middleware.md  multi-file.md  production.md  realtime.md  records.md  routes.md  storage.md
pocketbase_markdown_docs/: README.md
pocketbase_markdown_docs/api/: 01_api-records.md  02_api-collections.md  03_api-files.md  05_api-settings.md  06_api-realtime.md  07_api-health.md  08_api-logs.md
pocketbase_markdown_docs/core/: 01_introduction.md  02_how-to-use.md  03_collections.md  04_api-rules-and-filters.md  05_authentication.md  06_files-handling.md  07_working-with-relations.md  08_use-as-framework.md  09_going-to-production.md
pocketbase_markdown_docs/go/: 01_overview.md  02_event-hooks.md  03_routing.md  04_database.md  05_record-operations.md  (+12 more)
ppbase/: __init__.py  __main__.py  app.py  config.py
project_docs/: 00_ROADMAP.md  01_pocketbase_features.md  02_pocketbase_architecture.md  03_api_specification.md  04_data_models_and_db.md  05_python_implementation_strategy.md  06_qa_test_report.md  07_comparison_report.md  08_flask_like_hooks_and_routing.md
test/: run_server.py
tests/: conftest.py  test_deps_optional_auth.py  test_oauth2_base_url.py
(+243 files in other folders)
